<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="hint_wt">Enter Your Weight</string>
    <string name="hint_htF">Enter Your Height (in Ft)</string>
    <string name="hint_htI">Enter Your Height ( in Inch)</string>
    <string name="launcherHint"> Check You Are Body Mass Index</string>
    <string name="result">Result</string>
    <string name="calculate_bmi">Calculate BMI</string>

</resources>