<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:id="@+id/llMain"
    tools:context=".MainActivity">

   <EditText
       android:id="@+id/edtWeight"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="12"
       android:hint="@string/hint_wt"
       android:inputType="number"
       android:layout_marginTop="70dp"
       />

    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/hint_htF"
        android:inputType="number"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/edtHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/hint_htI"
        android:inputType="number"
        android:layout_marginTop="10dp"
         />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi"
        android:layout_marginTop="11dp" />

     <TextView
         android:id="@+id/txtResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/result"
         android:textSize="21sp"
         android:textStyle="bold"
         android:layout_marginTop="11dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/banner_ad"
        android:gravity="center"/>



</LinearLayout>